18-two-vpcs-ec2-to-sqs-private-hosted-zone/security-groups.tf
# this file has two security groups, one for the ec2 instance, and 
# one for vpc interface endpoint


#########################################################################
##################### EC2 SECURITY GROUP & RULES ########################
#########################################################################

resource "aws_security_group" "security_group_for_ec2_instance" {
  name   = "security_group_for_ec2_instance"
  vpc_id = aws_vpc.vpc_for_ec2.id
  tags   = { Name = "security_group_for_ec2_instance" }
}

# allow the instance connect endpoint to get into the EC2 instance
resource "aws_vpc_security_group_ingress_rule" "ingress_ssh_rule" {
  security_group_id = aws_security_group.security_group_for_ec2_instance.id

  # where is the traffic coming from
  cidr_ipv4 = "0.0.0.0/0"

  from_port = 22
  to_port   = 22

  ip_protocol = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "egress_from_ec2_to_sqs_rule" {
  security_group_id = aws_security_group.security_group_for_ec2_instance.id

  # where is the traffic going
  referenced_security_group_id = aws_security_group.security_group_for_sqs_interface_endpoint.id

  from_port = 443
  to_port   = 443

  ip_protocol = "tcp"
}



########################################################################
############# VPC INTERFACE ENDPOINT SECURITY GROUP & RULES ############
########################################################################

resource "aws_security_group" "security_group_for_sqs_interface_endpoint" {
  name   = "security_group_for_sqs_interface_endpoint"
  vpc_id = aws_vpc.vpc_for_sqs_interface_endpoint.id
  tags   = { Name = "security_group_for_sqs_interface_endpoint" }
}

resource "aws_vpc_security_group_ingress_rule" "ingress_from_ec2_to_sqs_rule" {
  security_group_id = aws_security_group.security_group_for_sqs_interface_endpoint.id

  # where is the traffic coming from
  referenced_security_group_id = aws_security_group.security_group_for_ec2_instance.id

  from_port = 443
  to_port   = 443

  ip_protocol = "tcp"
}
